dsl2/src/test/resources/parsing/invalid/bad_tree/func_bad_return_2.uss
int foo() {
    if(1 == 1)
        return "non";
    return 12;
}
